--- a/build.gradle
+++ b/build.gradle
@@ -17,3 +17,11 @@ dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.12'
     testCompile 'org.assertj:assertj-core:3.8.0'
 }
+
+sourceSets {
+    test{
+        java{
+            srcDirs = ["src/test"]
+        }
+    }
+}
