--- a/build.gradle
+++ b/build.gradle
@@ -46,8 +46,9 @@ jacocoTestReport {
 
 task moveTestReport (type: Copy) {
     from("$buildDir/customReports/test/jacocoTestReport.xml")
-    into("$buildDir/reports/cobertura/jacocoTestReport.xml")
-    rename ("$buildDir/reports/cobertura/jacocoTestReport.xml",
-            "$buildDir/reports/cobertura/coverage.xml")
+    into("$buildDir/reports/cobertura/")
+    rename { String fileName ->
+        fileName.replace('jacocoTestReport.xml', 'coverage.xml')
+    }
 }
 jacocoTestReport.finalizedBy(moveTestReport)
