--- a/build.gradle
+++ b/build.gradle
@@ -40,5 +40,6 @@ jacocoTestReport {
     reports {
         xml.enabled true
         html.enabled = true
+        xml.destination "${buildDir}/reports/jacoco/report.xml"
     }
 }
