--- a/build.gradle
+++ b/build.gradle
@@ -33,7 +33,7 @@ sourceSets {
 
 jacoco {
     toolVersion = "0.7.6.201602180812"
-    reportsDir = file("$buildDir/jscocoReports")
+    reportsDir = file("$buildDir/jacocoReports")
 }
 
 jacocoTestReport {
