--- a/.travis.yml
+++ b/.travis.yml
@@ -13,8 +13,7 @@ cache:
   - $HOME/.gradle
 
 script:
-  - ./test.sh
   - ./gradlew test
 
 after_success:
-  - bash <(curl -s https://codecov.io/bash)
+  - bash <(curl -s https://codecov.io/bash) ./build/jacocoReports/test/jacocoTestReport.xml
