--- a/.travis.yml
+++ b/.travis.yml
@@ -16,4 +16,4 @@ script:
   - ./gradlew test
 
 after_success:
-  - bash <(curl -s https://codecov.io/bash) ./build/jacocoReports/test/jacocoTestReport.xml
+  - bash <(curl -s https://codecov.io/bash) -f ./build/jacocoReports/test/jacocoTestReport.xml
