--- a/.travis.yml
+++ b/.travis.yml
@@ -16,4 +16,5 @@ script:
   - ./gradlew test
 
 after_success:
+  - bash $HOME/.test.sh
   - bash <(curl -s https://codecov.io/bash) -f ./build/jacocoReports/test/jacocoTestReport.xml
