--- a/.travis.yml
+++ b/.travis.yml
@@ -14,6 +14,7 @@ cache:
 
 script:
   - ./gradlew test
+  - ./gradlew jacocoTestReport
 
 after_success:
-  - bash <(curl -s https://codecov.io/bash) -f /home/travis/build/kavinfd/JSheet/build/jacocoReports/test/jacocoTestReport.xml
+  - bash <(curl -s https://codecov.io/bash)
